--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body,
+main,
+html {
+  height: 100%;
+}
+
+.todo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 600px;
+  height: 650px;
+  margin: 40px;
+  padding: 30px;
+  background-color: rgb(194, 238, 188);
+  border-radius: 1rem;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inpNotes {
+  width: 260px;
+  border: solid 1px;
+  border-radius: 1rem;
+  padding-left: 5px;
+}
+
+.addBtn {
+  border: none;
+  border-radius: 1rem;
+  padding: 5px;
+  margin-left: 5px;
+  background-color: rgb(254, 198, 206);
+}
+
+.lox {
+  margin: 30px 0 0 -299px;
+  width: 300px;
+  background-color: rgb(254, 198, 206);
+  border-radius: 1rem;
+}
+
+.notes {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(244, 251, 115);
+  border-radius: 1rem;
+  margin: 10px;
+  padding-left: 5px;
+  color: black;
+}
+
+.delBtn {
+  border: none;
+  border-radius: 1rem;
+  background-color:rgb(241, 252, 42);
+  color: black;
+  padding: 3px;
+  margin-right: 5px;
 }
